One launcher to rule them all.